prevent shifting when scrollbar appears

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ body {
   min-height: 100vh;
   background-color: var(--primary-color);
   font-family: "Victor Mono Variable", sans-serif;
+  padding-left: calc(100vw - 100%)
 }
 
 *::-webkit-scrollbar-thumb {
